--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ address: 279 Campus Drive, Beckman Center, Stanford, CA 94305
 #address_link: https://www.google.fr/maps/place/Spin-Ion+Technologies/@48.7124352,2.194429,17z/data=!3m2!4b1!5s0x47e678bdc29075f7:0xbce23cefe16f4791!4m6!3m5!1s0x47e678bdc3c95555:0xe09ceff0db3725ab!8m2!3d48.7124317!4d2.1970093!16s%2Fg%2F11r4m02q4g?entry=ttu
 
 # Search Engine Optimization (SEO)
-keywords: song chen, chen song, songchen, chensong
-canonical: https://minimal-light-theme.yliu.me/
-description: Song Chen is a Ph.D. canditate at Spin-Ion Technologies and Université Paris-Saclay. His research lies at using magneto-ionics to develop new concepts for magnetic data storage, spintronic devices and magnonics, always with the aim of improving energy efficiency with respect to currently available technologies - with a special focus on the boosting magneto-ionic effect using ion irradiation & ion implantation.
+keywords: jun xu, xu jun, xujun, junxu, 徐俊
+#canonical: https://minimal-light-theme.yliu.me/
+#description: Song Chen is a Ph.D. canditate at Spin-Ion Technologies and Université Paris-Saclay. His research lies at using magneto-ionics to develop new concepts for magnetic data storage, spintronic devices and magnonics, always with the aim of improving energy efficiency with respect to currently available technologies - with a special focus on the boosting magneto-ionic effect using ion irradiation & ion implantation.
 
 # The option is used to enable the Johns Hopkins template.
 enable_hopkins_logo: false
@@ -23,12 +23,12 @@ enable_hopkins_logo: false
 enable_last_update: false
 
 # Links
-google_scholar: https://scholar.google.com/citations?user=sf-0AGoAAAAJ&hl=de
-cv_link: 
-github_link: https://github.com/song-chen1/
-linkedin: https://www.linkedin.com/in/song-chen-3449b9278/
-twitter: 
-researchgate: https://www.researchgate.net/profile/Song-Chen-60
+google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=lRUdD3UAAAAJ
+#cv_link: 
+#github_link: https://github.com/song-chen1/
+#linkedin: https://www.linkedin.com/in/song-chen-3449b9278/
+#twitter: 
+#researchgate: https://www.researchgate.net/profile/Song-Chen-60
 
 # Images 
 avatar: ./assets/img/avatar.jpg
