--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,11 +10,9 @@ main:
   - title: "Publications"
     url: ./#publications
 
-  - title: "Projects"
-    url: ./#projects
 
-  - title: "News"
-    url: ./#news
+  #- title: "News"
+  #  url: ./#news
 
   - title: "Blogs"
     url: ./blog/
