--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,33 +1,33 @@
 main:
 
-  - title: Multi-target electrochemical malaria aptasensor on flexible multielectrode arrays for detection in malaria parasite blood samples
-    authors: Gabriela Figueroa-Miranda, <strong>Song Chen</strong>, Marc Neis, Lei Zhou, Yuting Zhang, Young Lo, Julian Alexander Tanner, Andrea Kreidenweiss, Andreas Offenhäusser, Dirk Mayer
-    conference_short: Sens. Actuators B Chem.
-    conference: Sensors and Actuators B Chemical
-    pdf: ./assets/files/multi.pdf
-    page: https://www.sciencedirect.com/science/article/abs/pii/S0925400521013800?via%3Dihub
-    bibtex: ./assets/files/multi.txt
-    image: ./assets/files/multi.jpg
+  - title: Structural and functional characterization of the endogenous agonist for the orphan receptor GPR3
+    authors: G.Chen,N.Staffen,Z.Wu,X.Xu,J.Pan,A.Inoue,R.Han,P.Gmeiner*,YangDu*,<strong> J. Xu*</strong>
+    #conference_short: Sens. Actuators B Chem.
+    conference: Cell Research
+    #pdf: ./assets/files/multi.pdf
+    #page: 
+    #bibtex: ./assets/files/multi.txt
+    #image: ./assets/files/multi.jpg
+    notes: In revision
+
+  - title: Structural and dynamic insights into supra- physiological activation and allosteric modulation of a muscarinic receptor
+    authors: <strong>J.Xu#</strong>,Q.Wang#,H.Hübner,Y.Hu,X.Niu,S.Maeda,A.Inoue,H.Wang,Y.Tao,P. Gmeiner, Y. Du, C. Jin, &B. K. Kobilka
+    conference_short: NC
+    conference: Nature communications. 2023, Jan 23
+    #pdf: https://onlinelibrary.wiley.com/doi/pdf/10.1002/admi.202200690
+    page: https://www.nature.com/articles/s41467-022-35726-z
+    #bibtex: ./assets/files/magnetoionic.txt
+    #image: ./assets/files/admi202270196-gra-0001-m.jpg
     notes: Published
 
-  - title: Magneto‐Ionics in Annealed W/CoFeB/HfO2 Thin Films
-    authors: Rohit Pachat, Djoudi Ourdani, Maria‐andromachi Syskaki, Alessio Lamperti, Subhajit Roy, <strong>Song Chen</strong>, Adriano Di Pietro, Ludovic Largeau, Roméo Juge, Maryam Massouras, Cristina Balan, Johannes Wilhelmus van der Jagt, Guillaume Agnus, Yves Roussigné, Mihai Gabor, Salim Mourad Chérif, Gianfranco Durin, Shimpei Ono, Jürgen Langer, Damien Querlioz, Dafiné Ravelosona, Mohamed Belmeguenai, Liza Herrera Diez
-    conference_short: Adv. Mater. Interfaces
-    conference: Advanced Materials Interfaces
-    pdf: https://onlinelibrary.wiley.com/doi/pdf/10.1002/admi.202200690
-    page: https://www.sciencedirect.com/science/article/abs/pii/S0925400521013800?via%3Dihub
-    bibtex: ./assets/files/magnetoionic.txt
-    image: ./assets/files/admi202270196-gra-0001-m.jpg
-    notes: Published
-
-  - title: Flexible multielectrode arrays based electrochemical aptasensor for glycated human serum albumin detection
-    authors: Lei Zhou, Gabriela Figueroa-Miranda, <strong>Song Chen</strong>, Marc Neis, Ziheng Hu, Ruifeng Zhu, Yaqi Li, Michael Prömpers, Andreas Offenhäusser, Dirk Mayer
-    conference_short: Sens. Actuators B Chem.
-    conference: Sensors and Actuators B Chemical
-    pdf: ./assets/files/SSRN-id4328224.pdf
-    page: https://www.sciencedirect.com/science/article/abs/pii/S0925400523004458
-    bibtex: ./assets/files/flexible.txt
-    image: ./assets/files/1-s2.0-S0925400523004458-ga1_lrg.jpg
+  - title: Conformational complexity and dynamics in a muscarinic receptor revealed by NMR spectroscopy
+    authors: <strong>J. Xu</strong>, Y. Hu, J. Kaindl, P. Risel, H. Hübner, S. Maeda, X. Niu, H. Li, P. Gmeiner, C. Jin, B. K. Kobilka
+    conference_short: MC
+    conference: Molecular Cell. 2019 July 11
+    #pdf: ./assets/files/SSRN-id4328224.pdf
+    page: https://www.sciencedirect.com/science/article/pii/S109727651930320X?via%3Dihub
+    #bibtex: ./assets/files/flexible.txt
+    #image: ./assets/files/1-s2.0-S0925400523004458-ga1_lrg.jpg
     notes: Published
 
   
