--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -27,7 +27,7 @@ main:
     #pdf: ./assets/files/SSRN-id4328224.pdf
     page: https://www.sciencedirect.com/science/article/pii/S109727651930320X?via%3Dihub
     #bibtex: ./assets/files/flexible.txt
-    #image: ./assets/files/1-s2.0-S0925400523004458-ga1_lrg.jpg
+    image: ./assets/files/pub3.jpg
     notes: Published
 
   
