--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=lRUdD3UAAAAJ
 #researchgate: https://www.researchgate.net/profile/Song-Chen-60
 
 # Images 
-avatar: ./assets/img/bb.png
+avatar: ./assets/img/jun.jpg
 #favicon: ./assets/img/favicon.png
 #favicon_dark: ./assets/img/favicon-dark.png
 
