--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ enable_last_update: false
 
 # Links
 google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=lRUdD3UAAAAJ
-#cv_link: 
+cv_link: 
 #github_link: https://github.com/song-chen1/
-#linkedin: https://www.linkedin.com/in/song-chen-3449b9278/
+linkedin: 
 #twitter: 
 #researchgate: https://www.researchgate.net/profile/Song-Chen-60
 
