--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ linkedin:
 
 # Images 
 avatar: ./assets/img/jun.jpg
-#favicon: ./assets/img/jun.jpg
-#favicon_dark: ./assets/img/jun.jpg
+favicon: ./assets/img/jun.jpg
+favicon_dark: ./assets/img/jun.jpg
 
 # Footnotes
 # Footnote
