--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -41,7 +41,7 @@ main:
     notes: Published
 
 
-  - title: Conformational complexity and dynamics in a muscarinic receptor revealed by NMR spectroscopy
+  - title: Structural and dynamic insights into supra- physiological activation and allosteric modulation of a muscarinic receptor
     authors: <strong>J. Xu</strong>, Y. Hu, J. Kaindl, P. Risel, H. Hübner, S. Maeda, X. Niu, H. Li, P. Gmeiner, C. Jin, B. K. Kobilka
     conference_short: MC
     conference: Molecular Cell. 2019, July 11
