--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -30,9 +30,9 @@ main:
     image: ./assets/files/pub3.jpg
     notes: Published
 
-  - title: Structural and dynamic insights into supra- physiological activation and allosteric modulation of a muscarinic receptor
-    authors: <strong>J.Xu#</strong>,Q.Wang#,H.Hübner,Y.Hu,X.Niu,S.Maeda,A.Inoue,H.Wang,Y.Tao,P. Gmeiner, Y. Du, C. Jin, &B. K. Kobilka
-    conference_short: Nat Commun
+  - title: Conformational complexity and dynamics in a muscarinic receptor revealed by NMR spectroscopy
+    authors: <strong>J. Xu</strong>, Y. Hu, J. Kaindl, P. Risel, H. Hübner, S. Maeda, X. Niu, H. Li, P. Gmeiner, C. Jin, B. K. Kobilka
+    conference_short: MC
     conference: Nature communications. 2023, Jan 23
     #pdf: https://onlinelibrary.wiley.com/doi/pdf/10.1002/admi.202200690
     page: https://www.nature.com/articles/s41467-022-35726-z
@@ -41,12 +41,3 @@ main:
     notes: Published
 
 
-  - title: Structural and dynamic insights into supra- physiological activation and allosteric modulation of a muscarinic receptor
-    authors: <strong>J. Xu</strong>, Y. Hu, J. Kaindl, P. Risel, H. Hübner, S. Maeda, X. Niu, H. Li, P. Gmeiner, C. Jin, B. K. Kobilka
-    conference_short: MC
-    conference: Molecular Cell. 2019, July 11
-    #pdf: ./assets/files/SSRN-id4328224.pdf
-    page: https://www.sciencedirect.com/science/article/pii/S109727651930320X?via%3Dihub
-    #bibtex: ./assets/files/flexible.txt
-    image: ./assets/files/pub2.jpg
-    notes: Published
