--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -32,7 +32,7 @@ main:
 
   - title: Conformational complexity and dynamics in a muscarinic receptor revealed by NMR spectroscopy
     authors: <strong>J. Xu</strong>, Y. Hu, J. Kaindl, P. Risel, H. Hübner, S. Maeda, X. Niu, H. Li, P. Gmeiner, C. Jin, B. K. Kobilka
-    conference_short: MC
+    conference_short: Nat Commun
     conference: Nature communications. 2023, Jan 23
     #pdf: https://onlinelibrary.wiley.com/doi/pdf/10.1002/admi.202200690
     page: https://www.nature.com/articles/s41467-022-35726-z
