--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -31,7 +31,7 @@ main:
     notes: Published
 
   - title: Conformational complexity and dynamics in a muscarinic receptor revealed by NMR spectroscopy
-    authors: <strong>J. Xu</strong>, Y. Hu, J. Kaindl
+    authors: <strong>J. Xu</strong>
     conference_short: Nat Commun
     conference: Nature communications. 2023, Jan 23
     #pdf: https://onlinelibrary.wiley.com/doi/pdf/10.1002/admi.202200690
