--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -32,8 +32,8 @@ main:
 
   - title: Conformational complexity and dynamics in a muscarinic receptor revealed by NMR spectroscopy
     authors: <strong>J.Xu#</strong>,Q.Wang#,H.Hübner,Y.Hu,X.Niu,S.Maeda,A.Inoue,H.Wang,Y.Tao,P. Gmeiner, Y. Du, C. Jin, &B. K. Kobilka
-    conference_short: Nat Commun
-    conference: Nature communications. 2023, Jan 23
+    conference_short: MC
+    conference: Molecular Cell. 2019, July 11
     #pdf: https://onlinelibrary.wiley.com/doi/pdf/10.1002/admi.202200690
     page: https://www.nature.com/articles/s41467-022-35726-z
     #bibtex: ./assets/files/magnetoionic.txt
