--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -32,7 +32,7 @@ main:
 
   - title: Structural insights into ligand recognition, activation and signaling of the α2A- adrenergic receptor
     authors: <strong>J.Xu#</strong>,S.Cao#,H.Hübner#,D.Weikert,G.Chen,Q.Lu,D.Yuan,P.Gmeiner,Z.Liu, & Y. Du
-    conference_short: SA
+    conference_short: Sci. Adv.
     conference: Science Advances. 2022, March 4
     #pdf: https://onlinelibrary.wiley.com/doi/pdf/10.1002/admi.202200690
     page: https://www.science.org/doi/full/10.1126/sciadv.abj5347
