--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -22,7 +22,7 @@ main:
 
   - title: Conformational complexity and dynamics in a muscarinic receptor revealed by NMR spectroscopy
     authors: <strong>J. Xu</strong>, Y. Hu, J. Kaindl, P. Risel, H. Hübner, S. Maeda, X. Niu, H. Li, P. Gmeiner, C. Jin, B. K. Kobilka
-    conference_short: MC
+    conference_short: Mol Cell
     conference: Molecular Cell. 2019, July 11
     #pdf: ./assets/files/SSRN-id4328224.pdf
     page: https://www.sciencedirect.com/science/article/pii/S109727651930320X?via%3Dihub
