--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,7 @@ main:
 
   - title: Structural and functional characterization of the endogenous agonist for the orphan receptor GPR3
     authors: G.Chen,N.Staffen,Z.Wu,X.Xu,J.Pan,A.Inoue,R.Han,P.Gmeiner*,YangDu*,<strong> J. Xu*</strong>
-    #conference_short: Sens. Actuators B Chem.
+    conference_short: Cell Res.
     conference: Cell Research
     #pdf: ./assets/files/multi.pdf
     #page: 
