--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -58,4 +58,4 @@ main:
     page: https://www.science.org/doi/full/10.1126/science.abn7065
     #bibtex: ./assets/files/magnetoionic.txt
     image: ./assets/files/pub6.jpg
-    notes: Published
+    notes: Highlighted by Nature Reviews Drug Discovery: “Virtual screening yields refined GPCR agonists”
