--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ affiliation: School of Medicine,Stanford University
 subaffiliation: Department of Molecular and Cellular Physiology 
 #affiliation_link: https://www.universite-paris-saclay.fr/
 #subaffiliation_link: https://www.spin-ion.com/
-affiliation_logo: ./img/logo.svg
+#affiliation_logo: ./img/logo.svg
 email: junxu@stanford.edu
 #email2: 
 address: 279 Campus Drive, Beckman Center, Stanford, CA 94305
