--- a/_config.yml
+++ b/_config.yml
@@ -35,11 +35,10 @@ avatar: ./assets/img/jun.jpg
 favicon: ./assets/img/jun.jpg
 favicon_dark: ./assets/img/jun.jpg
 
-# Footnotes
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
 enable_footnote: false
-footnote: Feel free to use my website's source code.
+footnote: Feel free to use my website's source code.hh
 footnote_link: https://github.com/yaoyao-liu/minimal-light
 
 # Use this project as a remote theme for GitHub Pages
